<resources>
    <string name="app_name">foodyofme</string>

    <!-- content description image -->
    <string name="cdi_logo">logo</string>

    <!-- label text view -->
    <string name="label_version_name">Version %1$s</string>
    <string name="label_loading">Loading…</string>
    <string name="label_logo">Foody App</string>

    <!-- label button -->
    <string name="title_login">Sign In</string>
    <string name="title_register">Sign Up</string>
    <string name="title_login_facebook">Facebook</string>
    <string name="title_login_google">Google</string>
    <string name="title_start_register">Don\'t have a account ? <u>Sign up here</u></string>
    <string name="title_start_login">Already have a account ? <u>Sign in here</u></string>

    <!-- hint edit text -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <!-- error -->
    <string name="error_email">Enter a valid email</string>
    <string name="error_password">Password must be 6 characters</string>
    <string name="error_login">Login failed</string>
    <string name="error_empty_email">Email is empty</string>
    <string name="error_empty_password">Password id empty</string>
    <string name="error_confirm_password">Password doesn\'t confirm password</string>

    <!--dialog-->
    <string name="dialog_title">Notification</string>
    <string name="dialog_ok">OK</string>

    <!--facebook login-->
    <string name="facebook_app_id">828116660869575</string>
    <string name="fb_login_protocol_scheme">fb828116660869575</string>

    <!--toolbar-->
    <string name="menu_places">Places</string>
    <string name="menu_food">Food</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_category">Category</string>
    <string name="menu_city">HCM City</string>
    <string name="menu_add">Add</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_order_delivery">Order Delivery</string>
    <string name="menu_game_fun">Game &amp; Fun</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_blog">Blogs</string>
    <string name="menu_top_members">Top members</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
